[SCRUM-190] Fix : OpenSearch 사용 방식 변경